<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ventas">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="395dp"
        android:layout_height="122dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/escanear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/escanear"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginEnd="67dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:text="@string/QR"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/editText5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="193dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/agregar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/escanear" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="194dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="7dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/agregar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/escanear" />

    <Button
        android:id="@+id/agregar"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginStart="74dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:text="@string/Agregar"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/spinner1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText5" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="391dp"
        android:layout_height="206dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/agregar" />

    <Button
        android:id="@+id/button"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:text="@string/pagar"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner1" />

</androidx.constraintlayout.widget.ConstraintLayout>